[project]
name = "tic-tac-toe-pygame"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "i0z0m", email = "i0z0mu@gmail.com" }
]
dependencies = [
    "pygame~=2.4.0",
    "pygbag>=0.8.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
